assets/styles/style.css
html, body {
	height: 100%;
	margin: 0;
	padding: 0;
	background-color: #ffd180
}

h1 {
	font-size: 12px; 
}



/* NAV BAR */
.brand-logo {
	width: 230px;
}

#logo-container{
	left: 38px;
}

#loginStatus {
margin-top: -2px;
}

/* GOOGLE MAPS */

#map {
	height: 360px;
	max-width: 100%;
	border: solid white .5px;
	margin-top: 36px;
	box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
}

.controls {
	margin-top: 10px;
	border: 1px solid transparent;
	border-radius: 2px 0 0 2px;
	box-sizing: border-box;
	-moz-box-sizing: border-box;
	height: 32px;
	outline: none;
	box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
}

#pac-input {
	background-color: #fff;
	font-family: Roboto;
	font-size: 15px;
	font-weight: 300;
	margin-left: 12px;
	padding: 0 11px 0 13px;
	text-overflow: ellipsis;
	width: 300px;
}

#pac-input:focus {
	border-color: #4d90fe;
}

.pac-container {
	font-family: Roboto;
}

#type-selector {
	color: #fff;
	background-color: #4d90fe;
	padding: 5px 11px 0px 11px;
}

#type-selector label {
	font-family: Roboto;
	font-size: 13px;
	font-weight: 300;
}
#target {
	width: 345px;
}

/* STRUCTURAL FROM MATERIALIZE */
/* materialize panel */
.custom-cont{
	text-align: center;
}

/* SOLAR DATA PANEL */

/* solar icon container */
.solar-icon {
	clear: right;
}

/* solar element (title-icon-time) container */
.solar-container {
	display: inline-block;
	padding: 12px;
}

#city-name, h1 {
	font-family: Pacifico, Roboto;
}

/* solar data footnote */
#local {
	font-size: xx-small;
}

.solar-data-cont {
	box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
}

/* FLIPCARD */
#flipCard {
	height: 360px;
	margin-top: 36px;
	margin-right: 33px;

}

/* SIGN IN OR SIGN UP */

input[type="text"] {
	font-size: medium;
}

/* login button */
.btn-login {
	display: inline-block;
	margin: 48px 12px;
}

/* login element container */
.login-element {
	margin: 12px 0px;
}

/* error message */
#errorMessage {
	margin-top: -16px;
	color: #777;
}

/* RECENT SEARCHES */
.recentSearch {
	background-color: white;
}

.recentSearch:hover {
	background-color: #b3e5fc;
}

#recent-searches {
	text-align: center;
}

#recent-searches-title{
	display: inline-block;
}


#previousSearches {
	border-top: none;
	/*height: 300px;
	overflow-y: scroll;
	display: block;*/
}

.panel-body {
	height: 270px;
	overflow-y: auto;
	padding: 0px;
}




/* FOR MOBILE */
@media only screen and (max-width: 992px) {


	#flipCard {
		
		margin: 12px 0px;
		height: 300px;
	}

	#map {
		heigth: 360px;
		margin-top: 12px;
	}

	#container {
		margin: 36px 0px;
	}

	.solar-container {
		display: inline-block;
		padding: 0px;
		margin-left: -12px;
		margin-top:-6px;
	}

	.btn-login {
		display: inline-block;
		margin: 12px 12px;
	}

	.row {
		margin-bottom: 0px;
	}

	#recent-searches-title {
		margin-top: -12px;
	}

	.solar-icon {
		margin-top: -12px;
	}
}

